# pypelines

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONSTITUTION.md  Makefile  README.md  pre-commit.sh  pyproject.toml  pytest.sh  run.sh  streamlit_app.py
.github/: renovate.json
.github/workflows/: auto-code-review.yml  branch-protection.yml  build-and-publish.yml  ci.yml  codeql.yml  docker-build.yml  renovate.yml
.streamlit/: config.toml
scripts/: bootstrap.sh  pre-commit-pytest.sh
specs/001-run-everything-that/: spec.md
src/pypelines/: __init__.py  ai.py  cli.py
terraform/: main.tf
test1/: .pre-commit-config.yaml  CHANGELOG.md  CONSTITUTION.md  Dockerfile  README.md  mypy.ini  pyproject.toml
test1/.github/workflows/: auto-code-review.yml  branch-protection.yml  build-and-publish.yml  ci.yml  codeql.yml
test1/src/pypelines/: cli.py  main.py
test1/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
test1/tests/: test_ai.py
tests/: test_smoke.py
