[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypelines"
version = "0.1.0"
description = "Minimal ASGI service"
readme = "README.md"
authors = [ { name = "Christian Kabelin" } ]
license = { text = "GPL" }
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.117.1",
  "uvicorn[standard]>=0.37.0",
  "streamlit>=1.50",
  "langchain>=0.3.27",
  "langchain-community>=0.3.27",
  "langchain-huggingface>=0.3.1",
  "ollama>=0.6.0",
  "sentence-transformers>=5.1.1",
  "chromadb>=1.1.0",
  "tiktoken>=0.11.0",
  "typing-extensions>=4.15.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.23.0",
  "ruff>=0.12.0",
  "mypy>=1.9",
  "pytest-asyncio>=0.20",
  "pydocstyle>=6.3",
  "pre-commit>=3.3",
  "requests>=2.31",
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pydocstyle]
# Use Google style docstrings
convention = "google"

[project.scripts]
# exposes a `uv` command after installation: `uv run` will start the app
uv = "pypelines.cli:main"
