[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypelines"
version = "0.1.0"
description = "Minimal ASGI service"
readme = "README.md"
authors = [ { name = "Christian Kabelin" } ]
license = { text = "GPL" }
requires-python = ">=3.13"

dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.23.0",
  "ruff>=0.12.0",
  "mypy>=1.9",
]

ai = [
  "streamlit>=1.24",
  "langchain>=0.0.297", # pin as appropriate for Ollama integration
  "ollama>=0.1.0",      # Python client for Ollama if available
  "sentence-transformers>=2.2.2",
  "chromadb>=0.3.29",
  "tiktoken>=0.4.0",
  "typing-extensions",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# minimal ruff configuration
line-length = 88
select = ["E", "F", "W", "I", "C", "T", "D"]
extend-ignore = ["E203"]

[tool.pydocstyle]
# Use Google style docstrings
convention = "google"

[project.scripts]
# exposes a `uv` command after installation: `uv run` will start the app
uv = "pypelines.cli:main"
